feat(profile): support for profile-management [EP-2508]
